<resources>
    <string name="app_name">SuitmediaProject</string>
    <string name="textfield_name">TextField Name</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="welcome">Welcome</string>
    <string name="john_doe">John Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="image_avatar">image_avatar</string>
    <string name="user_name"><![CDATA[First name & Last name]]></string>
    <string name="email">email@email.com</string>
</resources>