<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@drawable/bg_suitmedia">

    <Button
        android:id="@+id/btnImageAdd"
        android:layout_marginBottom="51dp"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:background="@drawable/btn_image_add"
        app:layout_constraintBottom_toTopOf="@+id/edtName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    
    <EditText
        android:id="@+id/edtName"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:hint="@string/name"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="name"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edtPalindrome"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:autofillHints="palindrome"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/palindrome"
        android:inputType="text"
        android:paddingStart="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="310dp"
        android:layout_height="41dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPalindrome"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="45dp"
        android:text="@string/check"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:background="@drawable/rounded_button"
        android:text="@string/next"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>